test/sema/compound-assign-immutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def foo(i: int*) {
    // CHECK: [[@LINE+1]]:8: error: cannot assign to immutable expression
    *i += 1
}
